--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #FF862A;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
+    --laranja-claro: #78ff2a;
+    --alto-contraste-fundo: #ff0000;
+    --alto-contraste-texto: #4c00ff;
     --alto-contraste-link: #ffd700;
 }
 
