--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --vermelho: #00c3ff;
+    --laranja-claro: #ffea2a;
     --alto-contraste-fundo: #ff0000;
     --alto-contraste-texto: #4c00ff;
     --alto-contraste-link: #ffd700;
